more wording changes

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: "maxBTC"
-description: "The first liquid, scalable BTC-denominated yield strategy"
+description: "The first liquid, scalable BTC-denominated yield asset"
 ---
 
 ## Mission
