--- a/overview/liquidity.mdx
+++ b/overview/liquidity.mdx
@@ -8,25 +8,7 @@ Liquidity is a cornerstone of maxBTC's design. Unlike traditional BTC vaults or 
 
 <img src="/images/day1Defi.png" alt="Full DeFi Ecosystem on Day 1" className="w-full rounded-lg mb-4" />
 
-## Liquidity Architecture
-
-<CardGroup cols={2}>
-  <Card title="DEX Integrations" icon="arrows-left-right" iconType="duotone">
-    Deep liquidity pools on decentralized exchanges enable instant trading without waiting periods, with smart routing to minimize costs.
-  </Card>
-  
-  <Card title="Accelerated Orderbook" icon="bolt" iconType="duotone">
-    10% buffer on Neutron enables instant wBTC redemption at 1-2% premium, allowing large withdrawals within minutes.
-  </Card>
-
-  <Card title="Arbitrage & Peg Protection" icon="scale-balanced" iconType="duotone">
-    Incentivized arbitrageurs maintain BTC peg while providing additional liquidity and efficient price discovery.
-  </Card>
-  
-  <Card title="Automated Operations" icon="gear" iconType="duotone">
-    Automated deposits, withdrawals, and in-protocol liquidations protect against risks while streamlining user experience.
-  </Card>
-</CardGroup>
+**Full DeFi ecosystem from day one** - maxBTC launches with complete liquidity infrastructure including market makers, vault managers, lending integrations, and cross-chain accessibility.
 
 ## Exit Options
 
@@ -36,39 +18,9 @@ maxBTC provides three ways to exit your position:
 2. **Standard Redemption**: Redeem for underlying BTC assets with minimal fees  
 3. **Accelerated Orderbook**: Instant wBTC redemption through automated limit orders and cross-chain routing
 
-## Key Benefits
+## What Makes This Unique
 
-### For Individual Users
-<div className="space-y-2 mb-6">
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span><strong>Instant Liquidity</strong>: Multiple exit options ensure you're never locked in</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span><strong>Risk Protection</strong>: Automated liquidations and diversified mechanisms reduce downside risk</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span><strong>Cost Efficiency</strong>: Smart routing and aggregated liquidity minimize entry/exit costs</span>
-  </div>
-</div>
-
-### For DeFi Ecosystem
-<div className="space-y-2 mb-6">
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span><strong>Lending Integration</strong>: Critical infrastructure for protocols like Morpho to offer maxBTC as collateral</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span><strong>Enhanced LTV</strong>: Superior liquidity enables better loan-to-value ratios and looping strategies</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span><strong>Full Composability</strong>: Seamless integration into existing DeFi protocols and yield strategies</span>
-  </div>
-</div>
+Unlike traditional BTC vaults with unpredictable exit windows, maxBTC provides multiple exit mechanisms that ensure instant liquidity for any position size. Built for composability from day one - use maxBTC as collateral, in lending protocols, or for yield strategies. The accelerated orderbook enables large liquidations and position management for vault managers and money markets.
 
 <Note>
   For detailed technical architecture including the minting contract implementation, see our <a href="/technical/architecture" className="text-amber-600 hover:text-amber-500 font-medium">System Architecture</a> documentation.
