--- a/overview/horizontal_scaling.mdx
+++ b/overview/horizontal_scaling.mdx
@@ -22,121 +22,30 @@ Unlike traditional BTC yield products that are limited by strategy capacity, max
   </Card>
 </CardGroup>
 
-## maxBTC's Horizontal Scaling Solution
+## Single Asset, Infinite Strategies Architecture
 
 **Unified Asset, Multiple Strategies**
 
 maxBTC maintains a single liquid asset while distributing risk and yield generation across multiple underlying strategies:
 
-<div className="space-y-2 mb-6">
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>JLP BTC Neutral ($500M capacity)</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Future TradFi strategies ($100B+ potential)</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Cross-exchange arbitrage opportunities</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Multi-chain yield sources</span>
-  </div>
-</div>
+- JLP BTC Neutral ($500M capacity)
+- Future TradFi strategies ($100B+ potential)
+- Cross-exchange arbitrage opportunities
+- Multi-chain yield sources
 
-**Architectural Advantages**
+<img src="/images/maxBTCmintingContract.png" alt="maxBTC Minting Contract Architecture" className="w-full rounded-lg mb-6" />
 
-The system is built for infinite scalability through:
-
-<div className="space-y-2 mb-6">
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Single minting contract with unified liquidity</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Modular vault architecture with individual caps</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Multiple vault managers (both internal and external)</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Cross-chain interoperability</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Insurance fund for risk management</span>
-  </div>
-</div>
-
-## Single Asset, Infinite Strategies Architecture
-
-<img src="/images/maxBTCmintingContract.png" alt="maxBTC Minting Contract Architecture" className="w-full rounded-lg mb-4" />
-
-### Network Effects of a Single Asset
+**How It Works**
 
 The maxBTC minting contract forms the core of our horizontal scaling approach, creating powerful network effects through a unified architecture:
 
-<div className="space-y-2 mb-6">
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span><strong>Single Point of Entry</strong>: All maxBTC tokens originate from one central minting contract, acting as the sole entry point for deposits while managing multiple underlying vaults through a standardized interface</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span><strong>Unified DEX Liquidity</strong>: Concentrates liquidity in a single asset rather than fragmenting across multiple tokens, creating deeper markets and enabling instant entry/exit</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span><strong>Optimized Capital Allocation</strong>: Automatically distributes capital across strategies based on yield and risk parameters while maintaining unified token representation</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span><strong>DeFi Integrations</strong>: Simplifies integration across lending platforms, yield aggregators, and other DeFi protocols</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span><strong>Arbitrage Protection</strong>: Helps protect the BTC peg and keeps entry/exit costs minimal through smart routing</span>
-  </div>
-</div>
+- **Single Point of Entry**: All maxBTC tokens originate from one central minting contract, managing multiple underlying vaults through a standardized interface
+- **Unified DEX Liquidity**: Concentrates liquidity in a single asset rather than fragmenting across multiple tokens, creating deeper markets
+- **Optimized Capital Allocation**: Automatically distributes capital across strategies based on yield and risk parameters
+- **DeFi Integrations**: Simplifies integration across lending platforms, yield aggregators, and other DeFi protocols
+- **Modular Vault Architecture**: Each yield strategy operates as an independent vault that can exist on any chain while contributing to the same maxBTC token
 
-### Scalable Vault Architecture
-
-maxBTC's modular vault architecture enables infinite scalability by treating each yield strategy as an independent vault that can operate on any blockchain while contributing to the same unified token. This approach allows for specialized management of different strategies while maintaining transparency and risk isolation.
-
-<CardGroup cols={2}>
-  <Card title="Every Strategy is a Vault" icon="vault" iconType="duotone">
-    Each yield strategy operates as an independent vault that can exist on any chain while contributing to the same maxBTC token.
-  </Card>
-  
-  <Card title="Multiple Vault Managers" icon="users-gear" iconType="duotone">
-    Distributed management enables specialized expertise for different strategies while maintaining unified asset representation.
-  </Card>
-
-  <Card title="Individual Strategy Caps" icon="shield" iconType="duotone">
-    Each vault has dedicated caps and insurance deposits to manage risk while allowing the overall protocol to scale infinitely.
-  </Card>
-  
-  <Card title="On-Chain Transparency" icon="eye" iconType="duotone">
-    Full transparency with on-chain vault reallocations and management, not a black-box hedge fund approach.
-  </Card>
-</CardGroup>
-
-## Strategy Expansion Process
-
-As maxBTC grows, new strategies can be integrated through a defined governance process:
-
-1. **Strategy Proposal**: New yield strategies are proposed and technically vetted
-2. **Risk Assessment**: Evaluation of risk parameters, including correlation with existing strategies
-3. **Capacity Allocation**: Each approved strategy receives an allocation cap
-4. **Gradual Integration**: New strategies are introduced with conservative caps that increase with proven performance
-
-## Current and Future Capacity
+## Strategy Capacity vs Pool Size
 
 Understanding maxBTC's capacity requires distinguishing between **strategy capacity** (how much maxBTC can deploy) and **underlying pool size** (total available liquidity):
 
@@ -154,70 +63,49 @@ Understanding maxBTC's capacity requires distinguishing between **strategy capac
   <strong>Why the difference?</strong> maxBTC's capacity is limited by capital efficiency (70/30 deployment ratio), risk management requirements, and the need to maintain instant liquidity for withdrawals.
 </div>
 
-<CardGroup cols={1}>
-  <Card title="Strategy Capacity Overview">
-    <div className="overflow-x-auto">
-      <table className="w-full">
-        <thead>
-          <tr className="border-b-2 border-purple-200 dark:border-purple-900">
-            <th className="p-2 text-left">Strategy</th>
-            <th className="p-2 text-left">maxBTC Capacity</th>
-            <th className="p-2 text-left">Expected APY</th>
-            <th className="p-2 text-left">Status</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr className="border-b border-purple-100 dark:border-purple-800">
-            <td className="p-2">JLP BTC Neutral</td>
-            <td className="p-2">$500M</td>
-            <td className="p-2">10-20%</td>
-            <td className="p-2">Active</td>
-          </tr>
-          <tr className="border-b border-purple-100 dark:border-purple-800">
-            <td className="p-2">CHF Carry Trade</td>
-            <td className="p-2">$100B+</td>
-            <td className="p-2">3-7%</td>
-            <td className="p-2">In Development</td>
-          </tr>
-          <tr className="border-b border-purple-100 dark:border-purple-800">
-            <td className="p-2">Additional CeFi/DeFi</td>
-            <td className="p-2">$1B+</td>
-            <td className="p-2">5-15%</td>
-            <td className="p-2">Research</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </Card>
-</CardGroup>
+## Current and Future Capacity
 
-## Benefits of Horizontal Scaling
+<div className="overflow-x-auto mb-6">
+  <table className="w-full border-collapse">
+    <thead>
+      <tr className="border-b-2 border-purple-200 dark:border-purple-900">
+        <th className="p-3 text-left">Strategy</th>
+        <th className="p-3 text-left">maxBTC Capacity</th>
+        <th className="p-3 text-left">Expected APY</th>
+        <th className="p-3 text-left">Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr className="border-b border-purple-100 dark:border-purple-800">
+        <td className="p-3">JLP BTC Neutral</td>
+        <td className="p-3">$500M</td>
+        <td className="p-3">10-20%</td>
+        <td className="p-3">Active</td>
+      </tr>
+      <tr className="border-b border-purple-100 dark:border-purple-800">
+        <td className="p-3">CHF Carry Trade</td>
+        <td className="p-3">$100B+</td>
+        <td className="p-3">3-7%</td>
+        <td className="p-3">In Development</td>
+      </tr>
+      <tr className="border-b border-purple-100 dark:border-purple-800">
+        <td className="p-3">Additional CeFi/DeFi</td>
+        <td className="p-3">$1B+</td>
+        <td className="p-3">5-15%</td>
+        <td className="p-3">Research</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-<CardGroup cols={3}>
-  <Card title="Diversification" icon="chart-mixed">
-    Reduced risk through strategy diversification across uncorrelated yield sources
-  </Card>
-  
-  <Card title="Yield Optimization" icon="arrow-trend-up">
-    Dynamic capital allocation to highest-yielding strategies as market conditions change
-  </Card>
-  
-  <Card title="Unlimited Capacity" icon="infinity">
-    No theoretical upper limit on total capacity due to multi-strategy approach
-  </Card>
-  
-  <Card title="User Simplicity" icon="user">
-    Complex scaling happens behind the scenes while users hold a single asset
-  </Card>
-  
-  <Card title="Strategy Specialization" icon="users-gear">
-    Each vault manager can focus on their area of expertise while contributing to unified yield
-  </Card>
-  
-  <Card title="Gradual Risk Introduction" icon="shield-check">
-    New strategies start with conservative caps that increase with proven performance
-  </Card>
-</CardGroup>
+**Strategy Expansion Process**
+
+As maxBTC grows, new strategies are integrated through a defined governance process:
+
+1. **Strategy Proposal**: New yield strategies are proposed and technically vetted
+2. **Risk Assessment**: Evaluation of risk parameters, including correlation with existing strategies
+3. **Capacity Allocation**: Each approved strategy receives an allocation cap
+4. **Gradual Integration**: New strategies are introduced with conservative caps that increase with proven performance
 
 ## Market Opportunity
 
@@ -268,17 +156,15 @@ Current on-chain BTC yield market is $4B+ overall:
 <div className="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
   <div>
     <div className="flex items-center gap-2 mb-2">
-      <div className="w-1.5 h-1.5 bg-amber-400 rounded-full"></div>
       <span className="font-semibold text-sm">Points vs Real Yield</span>
     </div>
     <p className="text-sm text-gray-600 dark:text-gray-400">
-      Most BTC LRTs offer only points-based yield with uncertain long-term value rather than actual BTC yield.
+      Most BTC LRTs offer only points-based yield with unc  ertain long-term value rather than actual BTC yield.
     </p>
   </div>
   
   <div>
     <div className="flex items-center gap-2 mb-2">
-      <div className="w-1.5 h-1.5 bg-amber-400 rounded-full"></div>
       <span className="font-semibold text-sm">Low Returns</span>
     </div>
     <p className="text-sm text-gray-600 dark:text-gray-400">
@@ -288,7 +174,6 @@ Current on-chain BTC yield market is $4B+ overall:
   
   <div>
     <div className="flex items-center gap-2 mb-2">
-      <div className="w-1.5 h-1.5 bg-amber-400 rounded-full"></div>
       <span className="font-semibold text-sm">Limited Composability</span>
     </div>
     <p className="text-sm text-gray-600 dark:text-gray-400">
