integrated mitya feedback round 2

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: "maxBTC"
-description: "The first liquid, scalable BTC-denominated yield asset"
+title: "Structured"
+description: "Introducing maxBTC, the first liquid, scalable BTC-denominated yield asset"
 ---
 
 ## Mission
@@ -55,7 +55,7 @@ maxBTC is a synthetic, liquid, yield-bearing BTC asset that maintains 1:1 BTC pr
 
 maxBTC's flagship yield strategy generates real BTC-denominated returns through sophisticated DeFi integration with Jupiter's perpetual market liquidity pools. Unlike points-based rewards, this yield comes from actual trading activity and market inefficiencies.
 
-The strategy maintains delta-neutral exposure to everything except BTC while capturing sustainable yield from perpetual market fees and arbitrage opportunities.
+The strategy maintains directional exposure to BTC while capturing sustainable yield from perpetual market fees and arbitrage opportunities.
 
 <Card title="Learn About the Strategy" icon="chart-line" href="/strategy/overview">
   Explore the complete JLP BTC Neutral strategy workflow, technical implementation, and yield sources
