--- a/overview/roadmap.mdx
+++ b/overview/roadmap.mdx
@@ -30,7 +30,7 @@ maxBTC is being developed through a careful, phased approach to ensure security,
     </div>
   </Step>
   
-  <Step title="May 2025: Private Deposits (In Progress)">
+  <Step title="Q2 2025: Private Deposits (In Progress)">
     <div className="space-y-2 mb-4">
       <div className="flex items-start gap-3 text-sm">
         <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
@@ -50,25 +50,8 @@ maxBTC is being developed through a careful, phased approach to ensure security,
       </div>
     </div>
   </Step>
-  
-  <Step title="May 2025: Seed Round Funding">
-    <div className="space-y-2 mb-4">
-      <div className="flex items-start gap-3 text-sm">
-        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-        <span>Strategic funding round focused on key ecosystem partners</span>
-      </div>
-      <div className="flex items-start gap-3 text-sm">
-        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-        <span>Development of growth strategy and marketing plans</span>
-      </div>
-      <div className="flex items-start gap-3 text-sm">
-        <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-        <span>Investment in security infrastructure and audit processes</span>
-      </div>
-    </div>
-  </Step>
 
-  <Step title="June 2025: Vault Pre-deposits">
+  <Step title="Q2 2025: Vault Pre-deposits">
     <div className="space-y-2 mb-4">
       <div className="flex items-start gap-3 text-sm">
         <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
@@ -89,7 +72,7 @@ maxBTC is being developed through a careful, phased approach to ensure security,
     </div>
   </Step>
   
-  <Step title="August 2025: Public Launch">
+  <Step title="Q3 2025: Public Launch">
     <div className="space-y-2 mb-4">
       <div className="flex items-start gap-3 text-sm">
         <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
@@ -135,81 +118,6 @@ maxBTC is being developed through a careful, phased approach to ensure security,
     </div>
   </Step>
 </Steps>
-
-## Key Milestones
-
-<CardGroup cols={2}>
-  <Card title="Pre-deposits TVL" icon="calendar" iconType="duotone">
-    <div className="flex justify-between items-center">
-      <span className="font-semibold">Target Date:</span>
-      <span>June 2025</span>
-    </div>
-    <div className="flex justify-between items-center mt-2">
-      <span className="font-semibold">Target:</span>
-      <span className="text-lg font-bold text-amber-600 dark:text-amber-500">$50M</span>
-    </div>
-  </Card>
-  
-  <Card title="maxBTC TVL at Launch" icon="rocket" iconType="duotone">
-    <div className="flex justify-between items-center">
-      <span className="font-semibold">Target Date:</span>
-      <span>August 2025</span>
-    </div>
-    <div className="flex justify-between items-center mt-2">
-      <span className="font-semibold">Target:</span>
-      <span className="text-lg font-bold text-amber-600 dark:text-amber-500">$200M+</span>
-    </div>
-  </Card>
-  
-  <Card title="DeFi Integration Count" icon="plug" iconType="duotone">
-    <div className="flex justify-between items-center">
-      <span className="font-semibold">Target Date:</span>
-      <span>Q4 2025</span>
-    </div>
-    <div className="flex justify-between items-center mt-2">
-      <span className="font-semibold">Target:</span>
-      <span className="text-lg font-bold text-amber-600 dark:text-amber-500">10+</span>
-    </div>
-  </Card>
-  
-  <Card title="Strategy Count" icon="layer-group" iconType="duotone">
-    <div className="flex justify-between items-center">
-      <span className="font-semibold">Target Date:</span>
-      <span>Q4 2025</span>
-    </div>
-    <div className="flex justify-between items-center mt-2">
-      <span className="font-semibold">Target:</span>
-      <span className="text-lg font-bold text-amber-600 dark:text-amber-500">3+</span>
-    </div>
-  </Card>
-</CardGroup>
-
-## Long-term Vision
-
-Beyond these initial milestones, maxBTC aims to:
-
-<div className="space-y-2 mb-6">
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Become the default BTC yield asset in DeFi, replacing points-based LRTs and low-yield alternatives</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Expand to a full suite of assets beyond BTC (maxETH, etc.)</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Enable true cross-chain composability for yield-bearing assets</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Create a platform for external strategies to plug into the infrastructure</span>
-  </div>
-  <div className="flex items-start gap-3 text-sm">
-    <div className="w-1.5 h-1.5 bg-amber-400 rounded-full flex-shrink-0 mt-2"></div>
-    <span>Develop advanced governance for risk management and strategy selection</span>
-  </div>
-</div>
 
 <CardGroup cols={1}>
   <Card title="Explore JLP BTC Neutral Strategy" icon="chart-line" href="/strategy/overview">
