--- a/strategy/faq.mdx
+++ b/strategy/faq.mdx
@@ -17,25 +17,6 @@ icon: "circle-question"
     Unlike traditional BTC vaults or hedge funds, maxBTC gives you instant liquidity and DeFi composability.
   </Accordion>
 
-  <Accordion title="How do I deposit and get maxBTC tokens?">
-    Currently, maxBTC is in private deposits phase with selected partners and investors. 
-    
-    When publicly available (August 2025), you'll be able to:
-    1. Deposit wBTC, ETH, USDC, or USDT on Ethereum
-    2. Receive maxBTC tokens minted on Neutron
-    3. Start earning yield immediately
-    
-    The process is designed to be simple - just deposit supported assets and receive maxBTC tokens representing your share of the yield-generating strategy.
-  </Accordion>
-
-  <Accordion title="How do I withdraw or exit my position?">
-    maxBTC offers multiple exit options for maximum flexibility. See our [Liquidity Model](/overview/liquidity) for complete details on:
-    
-    - **Instant DEX Trading**: Trade maxBTC on decentralized exchanges for immediate exit
-    - **Accelerated Orderbook**: Use the 10% buffer on Neutron for instant wBTC at 1-2% premium
-    - **Standard Redemption**: Redeem maxBTC for underlying BTC assets with minimal fees
-  </Accordion>
-
   <Accordion title="What makes maxBTC different from other BTC yield products?">
     maxBTC stands out in several key ways:
     
@@ -62,37 +43,10 @@ icon: "circle-question"
 ## Strategy Performance Questions
 
 <AccordionGroup>
-  <Accordion title="What is the difference between target APY and displayed APY on Jupiter?">
-    There are three different APY figures to consider:
-
-    1. **maxBTC Target APY**: ~10% at scale
-       - Net BTC-denominated returns after all costs and capital allocation efficiency
-
-    2. **JLP Website Displayed APY**: Often higher (e.g., 40%+)
-       - Returns on invested capital only (not accounting for capital efficiency)
-       - Only ~70% of capital is deployed, 30% reserved for hedging
-
-    3. **Realized APY**: What you actually receive
-       - Accounts for all costs, including funding fees
-       - Calculated based on BTC-denominated returns
-
-    For detailed performance breakdown, see our [Strategy Overview](/strategy/overview).
-  </Accordion>
-
   <Accordion title="Why are returns denominated in BTC terms?">
     The JLP Pool APY is **denominated in USD terms** on Jupiter, but **we translate returns back to BTC** for investor convenience. This gives maxBTC holders a clearer picture of their returns in terms of the asset they value most.
   </Accordion>
 
-  <Accordion title="What causes fluctuations in the NAV?">
-    NAV fluctuations come from several sources:
-
-    1. **JLP Token Price**: Market-driven fluctuations introduce "noise" to the NAV
-    2. **Funding Rate Dynamics**: 
-       - Negative funding rates can earn additional yield
-       - Positive funding rates are a cost (typical scenario)
-    
-    We display transparent market value rather than smoothed values so investors can see actual fluctuations.
-  </Accordion>
 </AccordionGroup>
 
 ## Technical Questions
@@ -113,18 +67,7 @@ icon: "circle-question"
     - **Withdrawal Fees**: When removing liquidity from the JLP pool
     - **Operational Costs**: API calls, gas fees, etc.
 
-    All costs are already accounted for in the reported target APY of ~10% at scale.
-  </Accordion>
-
-  <Accordion title="What are maxBTC's management fees?">
-    maxBTC operates with a transparent fee structure:
-    
-    **Management Fee**: Details to be announced before public launch
-    **Performance Fee**: Details to be announced before public launch
-    
-    All fees will be clearly disclosed and competitive with industry standards. The target APY figures already account for all operational costs, with management fees to be deducted from gross returns.
-    
-    Fee structure will be finalized and published before the August 2025 public launch.
+    All costs are already accounted for in the reported APY of ~10% at scale.
   </Accordion>
 
   <Accordion title="What is the strategy's capacity limit?">
