--- a/strategy/risks.mdx
+++ b/strategy/risks.mdx
@@ -18,15 +18,7 @@ icon: "shield-exclamation"
     - Flexible deployment ratios (30-70, 40-60, 50-50) to balance liquidation thresholds and yield impact
     - Geographic distribution of infrastructure prevents regional outages from affecting operations
   </Accordion>
-  
-  <Accordion title="Large Withdrawals and Slippage">
-    Withdrawals exceeding $20M may cause significant slippage beyond 0.5%.
-    
-    **Controls:**
-    - Private deposit phase: controlled through lock-up period
-    - Full protocol: controlled withdrawal periods and/or withdrawal fees
-    - Liquidity monitoring systems with automated alerts
-  </Accordion>
+
   
   <Accordion title="Smart Contract Risk">
     Dependence on Jupiter's smart contracts on Solana introduces potential vulnerabilities.
@@ -43,7 +35,7 @@ icon: "shield-exclamation"
     
     **Controls:**
     - Principal funds secured off-exchange through dedicated custodians
-    - Using Binance for trading operations (proven track record)
+    - Using Binance and other top tier exchanges for trading operations (proven track record)
     - Continuous monitoring of exchange health indicators
     - Geographic distribution of infrastructure
   </Accordion>
@@ -89,10 +81,6 @@ Our comprehensive risk monitoring system includes:
     70% of deposited WBTC is held on-chain as JLP, providing transparent balance verification and asset allocation visibility.
   </Card>
 </CardGroup>
-
-## Value BTC-Denominated
-
-All strategy performance calculations are denominated in BTC, maintaining clear focus on BTC-denominated returns even during market volatility. We leverage long BTC positions with 25% BTC on Binance, ensuring proper exposure management in both rising and falling markets.
 
 ## Disclaimer
 
