--- a/overview/liquidity.mdx
+++ b/overview/liquidity.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Liquidity Model"
 icon: "droplet"
-description: "How maxBTC provides instant entry and exit options for users"
+description: "How maxBTC's automated withdrawals with guaranteed processing times enable full composability"
 ---
 
-Liquidity is a cornerstone of maxBTC's design. Unlike traditional BTC vaults or hedge funds that lock capital with unpredictable exit windows, maxBTC is built from the ground up to enable instant entry and exit options.
+Liquidity is a cornerstone of maxBTC's design. Unlike traditional BTC vaults with manual processes and unpredictable exit windows, maxBTC features fully automated withdrawals with guaranteed processing times - the foundation that enables all advanced liquidity features.
 
 <img src="/images/day1Defi.png" alt="Full DeFi Ecosystem on Day 1" className="w-full rounded-lg mb-4" />
 
@@ -16,11 +16,19 @@ maxBTC provides three ways to exit your position:
 
 1. **Instant DEX Trading**: Trade on decentralized exchanges like Duality for immediate exit
 2. **Standard Redemption**: Redeem for underlying BTC assets with minimal fees  
-3. **Accelerated Orderbook**: Instant wBTC redemption through automated limit orders and cross-chain routing
+3. **In-Protocol Liquidation**: Automated underlying BTC redemption through limit orders and cross-chain routing
 
 ## What Makes This Unique
 
-Unlike traditional BTC vaults with unpredictable exit windows, maxBTC provides multiple exit mechanisms that ensure instant liquidity for any position size. Built for composability from day one - use maxBTC as collateral, in lending protocols, or for yield strategies. The accelerated orderbook enables large liquidations and position management for vault managers and money markets.
+maxBTC's exit mechanisms enable true DeFi composability, unlocking tangible benefits for users:
+
+- **Predictable withdrawal times and costs** - No uncertainty around exit timing or fees
+- **Instant DEX liquidity** - Trade immediately when market opportunities arise  
+- **Leveraged looping strategies** - Use maxBTC with lending protocols to amplify BTC exposure
+- **Universal collateral** - Deploy maxBTC as collateral across lending protocols and perps trading
+- **Higher LTV ratios** - In-protocol liquidations enable lending protocols to offer better terms
+
+Built for composability from day one, maxBTC transforms how users interact with BTC in DeFi - from simple holding to sophisticated yield and leverage strategies.
 
 <Note>
   For detailed technical architecture including the minting contract implementation, see our <a href="/technical/architecture" className="text-amber-600 hover:text-amber-500 font-medium">System Architecture</a> documentation.
