integrated hannah feedback

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,59 +3,63 @@ title: "Structured"
 description: "Introducing maxBTC, the first liquid, scalable BTC-denominated yield asset"
 ---
 
+# Introduction
+
+Structured is shaping a new standard for Bitcoin yield by transforming BTC from a static store of value into a dynamic, liquid asset that generates sustainable returns and unlocks broader financial utility. Leveraging deep expertise from leading liquid staking protocols and institutional staking providers, Structured builds on proven DeFi infrastructure to create scalable, transparent, and composable yield solutions that are designed specifically for Bitcoin's unique characteristics and structural realities.
+
 ## Mission
 
-Bitcoin is one of the world's most valuable assets – but most of it still sits idle.
+**Structured's mission is to unlock real BTC yield that's scalable, composable, and liquid by design.** We build native yield formats that solve liquidity and complexity challenges, making real yield on Bitcoin scalable, accessible, and ready to build on.
 
-Structured's mission is to unlock real BTC yield: simple to access, transparent by design, and ready to power new use cases. We bring BTC to life on-chain, creating assets that users can hold, build on, and integrate across DeFi.
+## Vision
+
+**Structured envisions a future where Bitcoin evolves from a store of value into a liquid, trusted asset that powers a transparent and scalable financial ecosystem.** Where real Bitcoin yield unlocks new opportunities for builders and investors – fueling growth that's secure, sustainable, and designed for the long term.
 
 ## The Problem
 
+Despite Bitcoin's dominant role as a digital store of value, much of it still sits idle. Today's BTC DeFi landscape faces key limitations that keep Bitcoin from being a liquid, composable, yield-generating asset.
+
 <div className="text-sm">
-The current BTCFi landscape presents three critical limitations:
+The current BTC DeFi landscape presents three critical limitations:
 </div>
 
 <CardGroup cols={3}>
   <Card title="No Real Yield" icon="ticket" iconType="duotone">
-    <div className="text-sm">BTC LRTs mostly offer unsustainable points-based yield, not genuine BTC returns. Staking yields are plummeting from 8% to 2% and points campaigns are ending.</div>
+    <div className="text-sm">BTC LRTs mostly offer unsustainable points-based rewards, not real BTC returns. Staking yields have dropped from 8% to about 2%, and points campaigns are ending.</div>
   </Card>
   
   <Card title="Illiquidity" icon="lock" iconType="duotone">
-    <div className="text-sm">BTC vaults and hedge funds lock up capital with unpredictable entry/exit windows and costs, limiting usability for DeFi.</div>
+    <div className="text-sm">BTC vaults and hedge funds lock capital with unpredictable entry and exit windows and costly withdrawals, limiting DeFi usability.</div>
   </Card>
   
-  <Card title="Not Scalable" icon="chart-network" iconType="duotone">
-    <div className="text-sm">BTC vaults rarely scale beyond 1,000 BTC and lack DeFi composability, limiting their potential for growth and integration.</div>
+  <Card title="Lack of Scalability" icon="chart-network" iconType="duotone">
+    <div className="text-sm">BTC vaults seldom exceed 1,000 BTC and lack composability within DeFi, constraining their growth and integration potential.</div>
   </Card>
 </CardGroup>
 
 ## Introducing maxBTC
 
-**Real Yield for Bitcoin**
-
-<div className="text-sm">
-maxBTC is a synthetic, liquid, yield-bearing BTC asset that maintains 1:1 BTC price exposure while generating BTC-denominated yield from proven DeFi strategies. Created by Structured, maxBTC is optimized for DEX, lending, and yield-splitting integrations while maintaining an effective 1x long BTC position that compounds rewards (similar to wstETH).
-</div>
+maxBTC is a synthetic, liquid, yield-bearing BTC asset designed to generate real BTC-denominated yield from diversified, proven DeFi strategies. Developed by Structured, maxBTC is optimized for seamless integration with decentralized exchanges, lending protocols, and yield-splitting platforms while preserving fully transparent BTC exposure that compounds rewards over time.
 
 <CardGroup cols={3}>
-  <Card title="Real BTC Yield" icon="bitcoin" iconType="duotone">
-    <div className="text-sm">Delivers sustainable ~10% APY via JLP pool fees, price impact, trading fees, and other DeFi mechanisms.</div>
+  <Card title="Real Yield on Bitcoin" icon="bitcoin" iconType="duotone">
+    <div className="text-sm">High BTC yield derived from programmatic, open-source strategies. Transparent strategy mechanics and risk metrics ensure security and clarity.</div>
   </Card>
 
-  <Card title="Liquid" icon="droplet" iconType="duotone">
-    <div className="text-sm">Tokenized for easy exit via DEXs and usable as collateral in DeFi, eliminating traditional lock-up periods.</div>
+  <Card title="Liquid and Composable" icon="droplet" iconType="duotone">
+    <div className="text-sm">Tokenized for instant liquidity – withdraw anytime or trade on DEXs with deep spot liquidity. Fully composable for use as collateral or in DeFi protocols.</div>
   </Card>
     
   <Card title="Infinitely Scalable" icon="chart-line-up" iconType="duotone">
-    <div className="text-sm">Designed to expand across multiple strategies and chains, combining yield sources for unlimited capacity growth.</div>
+    <div className="text-sm">Designed to expand across multiple strategies and chains, enabling unlimited capacity growth without dilution.</div>
   </Card>
 </CardGroup>
 
 ### Where Does the Yield Come From?
 
-maxBTC's flagship yield strategy generates real BTC-denominated returns through sophisticated DeFi integration with Jupiter's perpetual market liquidity pools. Unlike points-based rewards, this yield comes from actual trading activity and market inefficiencies.
+maxBTC's flagship yield strategy generates real BTC-denominated returns through a CeDeFi approach that combines DeFi liquidity provision with centralized exchange hedging. The strategy provides liquidity to Jupiter's perpetual market pools while maintaining BTC exposure through hedged positions on centralized exchanges.
 
-The strategy maintains directional exposure to BTC while capturing sustainable yield from perpetual market fees and arbitrage opportunities.
+Unlike points-based rewards, this yield comes from actual trading fees collected from the DEX liquidity pools. The strategy maintains directional exposure to BTC while capturing sustainable yield from perpetual market fees through this structured liquidity provision model.
 
 <Card title="Learn About the Strategy" icon="chart-line" href="/strategy/overview">
   Explore the complete JLP BTC Neutral strategy workflow, technical implementation, and yield sources
@@ -63,7 +67,7 @@ The strategy maintains directional exposure to BTC while capturing sustainable y
 
 ## About Structured
 
-<div className="text-sm">
-Structured is the organization behind maxBTC, focused on making real BTC yield liquid, scalable, and ready to build on. With a team experienced in DeFi protocol development and systematic trading, Structured transforms advanced DeFi strategies into simple, usable assets.
-</div>
+Structured is founded by industry veterans with deep experience at Lido (Ethereum's leading liquid staking provider), Drop (the largest liquid staking provider for interchain assets), and P2P (a top institutional staking provider and incubator of Lido). This background gives Structured unparalleled insight into making crypto assets liquid, secure, and impactful within open financial ecosystems.
+
+Building on this foundation, Structured delivers solutions that make real Bitcoin yield scalable, accessible, and ready to power the next generation of decentralized financial infrastructure. In a space often focused on short-term campaigns and incentives, Structured is committed to enabling long-term, sustainable growth for BTCFi.
 
