--- a/introduction.mdx
+++ b/introduction.mdx
@@ -15,7 +15,7 @@ Structured is shaping a new standard for Bitcoin yield by transforming BTC from 
 
 **Structured envisions a future where Bitcoin evolves from a store of value into a liquid, trusted asset that powers a transparent and scalable financial ecosystem.** Where real Bitcoin yield unlocks new opportunities for builders and investors – fueling growth that's secure, sustainable, and designed for the long term.
 
-## The Problem
+## The problem
 
 Despite Bitcoin's dominant role as a digital store of value, much of it still sits idle. Today's BTC DeFi landscape faces key limitations that keep Bitcoin from being a liquid, composable, yield-generating asset.
 
@@ -24,7 +24,7 @@ The current BTC DeFi landscape presents three critical limitations:
 </div>
 
 <CardGroup cols={3}>
-  <Card title="No Real Yield" icon="ticket" iconType="duotone">
+  <Card title="No real yield" icon="ticket" iconType="duotone">
     <div className="text-sm">BTC LRTs mostly offer unsustainable points-based rewards, not real BTC returns. Staking yields have dropped from 8% to about 2%, and points campaigns are ending.</div>
   </Card>
   
@@ -32,7 +32,7 @@ The current BTC DeFi landscape presents three critical limitations:
     <div className="text-sm">BTC vaults and hedge funds lock capital with unpredictable entry and exit windows and costly withdrawals, limiting DeFi usability.</div>
   </Card>
   
-  <Card title="Lack of Scalability" icon="chart-network" iconType="duotone">
+  <Card title="Lack of scalability" icon="chart-network" iconType="duotone">
     <div className="text-sm">BTC vaults seldom exceed 1,000 BTC and lack composability within DeFi, constraining their growth and integration potential.</div>
   </Card>
 </CardGroup>
@@ -42,26 +42,26 @@ The current BTC DeFi landscape presents three critical limitations:
 maxBTC is a synthetic, liquid, yield-bearing BTC asset designed to generate real BTC-denominated yield from diversified, proven DeFi strategies. Developed by Structured, maxBTC is optimized for seamless integration with decentralized exchanges, lending protocols, and yield-splitting platforms while preserving fully transparent BTC exposure that compounds rewards over time.
 
 <CardGroup cols={3}>
-  <Card title="Real Yield on Bitcoin" icon="bitcoin" iconType="duotone">
+  <Card title="Real yield on Bitcoin" icon="bitcoin" iconType="duotone">
     <div className="text-sm">High BTC yield derived from programmatic, open-source strategies. Transparent strategy mechanics and risk metrics ensure security and clarity.</div>
   </Card>
 
-  <Card title="Liquid and Composable" icon="droplet" iconType="duotone">
+  <Card title="Liquid and composable" icon="droplet" iconType="duotone">
     <div className="text-sm">Tokenized for instant liquidity – withdraw anytime or trade on DEXs with deep spot liquidity. Fully composable for use as collateral or in DeFi protocols.</div>
   </Card>
     
-  <Card title="Infinitely Scalable" icon="chart-line-up" iconType="duotone">
+  <Card title="Infinitely scalable" icon="chart-line-up" iconType="duotone">
     <div className="text-sm">Designed to expand across multiple strategies and chains, enabling unlimited capacity growth without dilution.</div>
   </Card>
 </CardGroup>
 
-### Where Does the Yield Come From?
+### Where does the yield come from?
 
 maxBTC's flagship yield strategy generates real BTC-denominated returns through a CeDeFi approach that combines DeFi liquidity provision with centralized exchange hedging. The strategy provides liquidity to Jupiter's perpetual market pools while maintaining BTC exposure through hedged positions on centralized exchanges.
 
 Unlike points-based rewards, this yield comes from actual trading fees collected from the DEX liquidity pools. The strategy maintains directional exposure to BTC while capturing sustainable yield from perpetual market fees through this structured liquidity provision model.
 
-<Card title="Learn About the Strategy" icon="chart-line" href="/strategy/overview">
+<Card title="Learn about the strategy" icon="chart-line" href="/strategy/overview">
   Explore the complete JLP BTC Neutral strategy workflow, technical implementation, and yield sources
 </Card>
 
